Make it compatible with 5.0 too

--- a/Ripple/Ripple-Info.plist
+++ b/Ripple/Ripple-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.torinnguyen.ripple.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.torinnguyen.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
